--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-alpha.82",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
