--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/montserrat": "^5.0.2",
     "@mui/joy": "^5.0.0-alpha.82",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
