--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/montserrat": "^5.0.2",
+    "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.82",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
