--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fontsource/montserrat": "^5.0.2",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-alpha.82",
+    "@mui/material": "^5.13.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "lottie-web": "^5.12.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
